trunk/Archive2/3e/d8a62fa7e7283d/output
main.cpp:7:35: error: 'void bar(N::Foo&)' should have been declared inside '::'
         friend void ::bar( Foo& f );
                                   ^
